--- a/app/src/main/res/values/integer.xml
+++ b/app/src/main/res/values/integer.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 	<integer name="double_back_press_time">6130</integer>
+	
+	<!-- Request Codes -->
+	<integer name="request_code_login">1</integer>
+	<!-- END Request Codes -->
 </resources>
