--- a/app/src/main/res/layout/fragment_advertisement.xml
+++ b/app/src/main/res/layout/fragment_advertisement.xml
@@ -16,12 +16,12 @@
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			style="@style/Widget.HappyApp.ContainedButton"
-			android:text="@string/offer"/>
+			android:text="@string/i_offer"/>
 		
 		<com.google.android.material.button.MaterialButton
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			style="@style/Widget.HappyApp.ContainedButton"
-			android:text="@string/looking"/>
+			android:text="@string/i_am_looking"/>
 	</LinearLayout>
 </LinearLayout>
