--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,7 +9,7 @@
 	<TextView
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:text="@string/closeToYou"
+		android:text="@string/close_to_you"
 		android:textAppearance="?attr/textAppearanceSubtitle2"/>
 	
 	<ListView
