--- a/app/src/main/res/layout/fragment_my_account.xml
+++ b/app/src/main/res/layout/fragment_my_account.xml
@@ -33,7 +33,7 @@
 			android:layout_column="1"
 			android:layout_columnSpan="2"
 			android:layout_columnWeight="1"
-			android:text="@string/name"/>
+			android:text="@string/name_with_placeholder"/>
 		
 		<TextView
 			android:layout_row="1"
@@ -47,6 +47,6 @@
 			android:layout_column="1"
 			android:layout_columnSpan="2"
 			android:layout_columnWeight="1"
-			android:text="@string/mode"/>
+			android:text="@string/mode_with_placeholder"/>
 	</GridLayout>
 </LinearLayout>
