--- a/app/src/main/res/layout/fragment_offer.xml
+++ b/app/src/main/res/layout/fragment_offer.xml
@@ -13,7 +13,7 @@
 		<TextView
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:text="@string/iWantToOffer"
+			android:text="@string/i_want_to_offer"
 			android:textAppearance="?attr/textAppearanceSubtitle2"/>
 		
 		<LinearLayout
