--- a/app/src/main/res/layout/item_favorites_list.xml
+++ b/app/src/main/res/layout/item_favorites_list.xml
@@ -21,7 +21,7 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_marginStart="12dp"
-		android:text="@string/name"
+		android:text="@string/name_with_placeholder"
 		android:textAppearance="?attr/textAppearanceHeadline5"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintStart_toEndOf="@id/favorites_image"
