--- a/app/src/main/res/layout/item_home_list.xml
+++ b/app/src/main/res/layout/item_home_list.xml
@@ -30,7 +30,7 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_marginStart="12dp"
-		android:text="@string/distance"
+		android:text="@string/distance_with_placeholder"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintStart_toEndOf="@id/home_image"
 		app:layout_constraintTop_toBottomOf="@+id/home_name"/>
