--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -17,7 +17,7 @@
 		android:id="@+id/imageView"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:contentDescription="@string/navigationHeaderDescription"
+		android:contentDescription="@string/navigation_header"
 		android:paddingTop="@dimen/navigationHeaderVerticalSpacing"
 		app:srcCompat="@mipmap/ic_launcher_round"/>
 	
@@ -25,12 +25,12 @@
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:paddingTop="@dimen/navigationHeaderVerticalSpacing"
-		android:text="@string/navigationHeaderTitle"
+		android:text="@string/android_studio"
 		android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
 	
 	<TextView
 		android:id="@+id/textView"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:text="@string/navigationHeaderSubtitle"/>
+		android:text="@string/android_studio_email"/>
 </LinearLayout>
