--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -16,5 +16,7 @@
 		android:layout_height="match_parent"
 		android:layout_margin="4dp"
 		android:background="@drawable/fragment_container_corner"
-		android:padding="8dp"></FrameLayout>
+		android:padding="8dp"
+		tools:layout_editor_absoluteX="16dp"
+		tools:layout_editor_absoluteY="240dp"></FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
