--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,3 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/nav_graph"/>
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/nav_graph"
+            app:startDestination="@id/loginFragment">
+	<fragment
+		android:id="@+id/loginFragment"
+		android:name="com.aresid.happyapp.fragments.LoginFragment"
+		android:label="LoginFragment"
+		tools:layout="@layout/fragment_login">
+		<action
+			android:id="@+id/action_loginFragment_to_registrationFragment"
+			app:destination="@id/registrationFragment"
+			app:enterAnim="@anim/slide_in_from_right"
+			app:exitAnim="@anim/slide_out_to_left"
+			app:popEnterAnim="@anim/slide_in_from_left"
+			app:popExitAnim="@anim/slide_out_to_right"/>
+		<argument
+			android:name="email"
+			android:defaultValue="None"/>
+		<action
+			android:id="@+id/action_loginFragment_to_mainFragment"
+			app:destination="@id/mainFragment"
+			app:enterAnim="@anim/slide_in_from_right"
+			app:exitAnim="@anim/slide_out_to_left"
+			app:popEnterAnim="@anim/slide_in_from_left"
+			app:popExitAnim="@anim/slide_out_to_right"/>
+	</fragment>
+	<fragment
+		android:id="@+id/mainFragment"
+		android:name="com.aresid.happyapp.fragments.MainFragment"
+		android:label="MainFragment"
+		tools:layout="@layout/fragment_main"/>
+	<fragment
+		android:id="@+id/registrationFragment"
+		android:name="com.aresid.happyapp.fragments.RegistrationFragment"
+		android:label="RegistrationFragment"
+		tools:layout="@layout/fragment_registration">
+		<action
+			android:id="@+id/action_registrationFragment_to_loadingFragment"
+			app:destination="@id/loadingFragment"/>
+	</fragment>
+	<fragment
+		android:id="@+id/loadingFragment"
+		android:name="com.aresid.happyapp.fragments.LoadingFragment"
+		android:label="LoadingFragment"
+		tools:layout="@layout/fragment_loading"/>
+</navigation>
