worked on the view pager system to show the subscriptions. i will not use a view holder but fragments. i will first let the user enter his credentials and accept the legalities, check the credentials and put them in a bundle. pass the bundle then through to the subscription fragment and in the fragment class, load the subscriptions and show the loading fragment in the view pager until they have been loaded.

--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -5,13 +5,23 @@
                                                    android:layout_height="match_parent">
 	
 	<TextView
-		android:id="@+id/text_view"
+		android:id="@+id/view_pager_title"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:text="registration layout"
+		android:text="@string/choose_subscription"
+		android:textAppearance="?attr/textAppearanceHeadline5"
+		app:layout_constraintStart_toStartOf="parent"
 		android:textAlignment="center"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintTop_toTopOf="parent"/>
+	
+	<androidx.viewpager2.widget.ViewPager2
+		android:id="@+id/view_pager"
+		android:layout_width="match_parent"
+		android:layout_height="0dp"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toTopOf="parent"/>
+		app:layout_constraintTop_toBottomOf="@+id/view_pager_title"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
