finished implementing the checkInput() behaviour. it is resetting the layout errors, defining the strings from the fields texts, checking if the input is ok and then calls RegistrationCheckerListener#inputIsOk callback. in the RegistrationFragment i implemented the behaviour of the subscribe button. it calls RegistrationChecker#checkInput and in the callback inputIsOk, it receives the bundle from RegistrationChecker#getInputBundle and passes this bundle through to the subscription fragment.

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -38,12 +38,16 @@
 		android:label="RegistrationFragment"
 		tools:layout="@layout/fragment_registration">
 		<action
-			android:id="@+id/action_registrationFragment_to_loadingFragment"
-			app:destination="@id/loadingFragment"/>
+			android:id="@+id/action_registrationFragment_to_subscriptionFragment"
+			app:destination="@id/subscriptionFragment"/>
 	</fragment>
 	<fragment
 		android:id="@+id/loadingFragment"
 		android:name="com.aresid.happyapp.fragments.LoadingFragment"
 		android:label="LoadingFragment"
 		tools:layout="@layout/fragment_loading"/>
+	<fragment
+		android:id="@+id/subscriptionFragment"
+		android:name="com.aresid.happyapp.fragments.SubscriptionFragment"
+		android:label="SubscriptionFragment"/>
 </navigation>
