created new packages. i will create packages regarding the function like signup function. also created rounded outlined image buttons and replaced the register button with two of these image buttons. one for email signup and one for google signup.

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -34,7 +34,7 @@
 		tools:layout="@layout/fragment_main"/>
 	<fragment
 		android:id="@+id/registrationFragment"
-		android:name="com.aresid.happyapp.fragments.RegistrationFragment"
+		android:name="com.aresid.happyapp.signup.EmailSignupFragment"
 		android:label="RegistrationFragment"
 		tools:layout="@layout/fragment_registration">
 		<action
