--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -94,23 +94,42 @@
 		app:layout_constraintTop_toBottomOf="@+id/loading_view_layout"/>
 	
 	<TextView
-		android:id="@+id/register_text_view"
+		android:id="@+id/signup_text_view"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:text="@string/question_no_account_yet"
 		android:textAlignment="center"
-		app:layout_constraintBottom_toTopOf="@+id/register_button"
+		android:layout_marginBottom="13dp"
+		app:layout_constraintBottom_toTopOf="@+id/signup_button_container"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"/>
 	
-	<com.google.android.material.button.MaterialButton
-		android:id="@+id/register_button"
-		style="@style/Widget.HappyApp.OutlinedButton"
-		android:layout_width="match_parent"
+	<LinearLayout
+		android:id="@+id/signup_button_container"
 		android:layout_height="wrap_content"
-		android:text="@string/register"
-		app:layout_constraintBottom_toBottomOf="parent"
+		android:layout_width="wrap_content"
+		android:layout_margin="13dp"
 		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"/>
+		android:gravity="center"
+		android:orientation="horizontal"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintStart_toStartOf="parent">
+		
+		<androidx.appcompat.widget.AppCompatImageButton
+			android:id="@+id/email_signup_button"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_marginEnd="6.5dp"
+			android:background="@drawable/round_button_background"
+			android:src="@drawable/ic_email_24dp"/>
+		
+		<androidx.appcompat.widget.AppCompatImageButton
+			android:id="@+id/google_signup_button"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_marginStart="6.5dp"
+			android:background="@drawable/round_button_background"
+			android:src="@drawable/ic_google_favicon_logo_24dp"/>
+	</LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
